--- a/trunk/FED.csproj
+++ b/trunk/FED.csproj
@@ -70,7 +70,7 @@
       <DependentUpon>GameListForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Plain.Design\ListViewGroupExCollectionEditor.cs" />
-    <Compile Include="Plain.Forms\MarginsConverter.cs" />
+    <Compile Include="Plain.Forms\EditMarginsConverter.cs" />
     <Compile Include="Plain.Design\ToolbarButtonExCollectionEditor.cs" />
     <Compile Include="Plain.Forms\TextBoxEx.cs">
       <SubType>Component</SubType>
