--- a/trunk/FED.csproj
+++ b/trunk/FED.csproj
@@ -237,6 +237,18 @@
   <ItemGroup>
     <None Include="Resources\DeleteUserFiles.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Config.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NotAvailable.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ConfigTemp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
