--- a/trunk/FED.csproj
+++ b/trunk/FED.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AppConfig.cs" />
     <Compile Include="AppInfo.cs" />
     <Compile Include="BaseConfig.cs" />
+    <Compile Include="DosboxLauncher.cs" />
     <Compile Include="FEDFormEx.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,7 +130,6 @@
     </Compile>
     <Compile Include="Plain.Native\NativeMethods.cs" />
     <Compile Include="Plain.Forms\OpenFileFolderDialog.CommonDialogNotifyWindow.cs">
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Plain.Forms\OpenFileFolderDialog.cs">
       <SubType>Component</SubType>
@@ -193,6 +193,7 @@
     <Compile Include="BitmapImageList.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Stopwatch.cs" />
     <Compile Include="UpdateConfig.cs" />
     <Compile Include="Updater.cs" />
   </ItemGroup>
@@ -278,6 +279,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Send.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ViewWeb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Keyboard.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
